soat/soat-api/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soat-api
  labels:
    name: soat-api
    app: fastfood-api
